Implementação de estilos no site

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro repositório</title>
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
-    <main>
+    <main>       
         <h1>Título</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur expedita quisquam fugiat omnis, laudantium voluptatem cum quo suscipit corporis animi vero cupiditate eos architecto! Veritatis, porro! Dolor accusantium enim consequatur!</p>
         <p>Vero atque deserunt qui ducimus beatae quis sint doloribus, sapiente repellendus ullam reiciendis voluptate laudantium perferendis quisquam. Cum dolores inventore ut excepturi eum, laborum sint, modi quod, similique fugit voluptate.</p>
